Add type chart in order to do type calculations in future
